<resources>
    <string name="app_name">Mon Arbre Généalogique</string>
    
    <string name="setup_welcome">Bienvenue !</string>
    <string name="setup_welcome_message">Configurons votre accès à Webtrees</string>
    <string name="setup_site_url">URL du site Webtrees</string>
    <string name="setup_url_hint">https://monsite.com/webtrees</string>
    <string name="setup_credentials">Identifiants</string>
    <string name="setup_username">Nom d'utilisateur</string>
    <string name="setup_password">Mot de passe</string>
    <string name="setup_tree_selection">Choix de l'arbre</string>
    <string name="setup_select_tree">Sélectionnez votre arbre généalogique</string>
    
    <string name="button_next">Suivant</string>
    <string name="button_finish">Terminer</string>
    <string name="button_save">Enregistrer</string>
    <string name="button_cancel">Annuler</string>
    
    <string name="nav_tree">Arbre</string>
    <string name="nav_search">Recherche</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_profile">Profil</string>
    <string name="change_tree">Changer d'arbre</string>
    <string name="settings">Paramètres</string>
    <string name="logout">Déconnexion</string>
    
    <string name="error_empty_url">Veuillez entrer l'URL du site</string>
    <string name="error_invalid_url">URL invalide</string>
    <string name="error_empty_username">Veuillez entrer votre nom d'utilisateur</string>
    <string name="error_empty_password">Veuillez entrer votre mot de passe</string>
    <string name="error_no_tree_selected">Veuillez sélectionner un arbre</string>
    <string name="error_connection">Erreur de connexion</string>
</resources>